@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2024-01-21T08:19:39Z",
+  "timestamp" : "2024-01-21T16:19:59Z",
   "count_outdated" : 6291,
   "uniques_outdated" : 2335,
-  "count" : 6522,
+  "count" : 6523,
   "uniques" : 2509,
   "clones" : [
     {
       "timestamp": "2024-01-07T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
+      "count_decinc": [ 1, 2 ],
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2024-01-08T00:00:00Z",
@@ -133,9 +133,9 @@
     },
     {
       "timestamp": "2024-01-21T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
