@@ -4,8 +4,8 @@
   "clones": [
     {
       "timestamp": "2024-01-07T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2024-01-08T00:00:00Z",
@@ -74,7 +74,7 @@
     },
     {
       "timestamp": "2024-01-21T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
